fix service buttons on mobile view

--- a/src/app/modules/services/services-detail/services-detail.component.scss
+++ b/src/app/modules/services/services-detail/services-detail.component.scss
@@ -34,7 +34,8 @@
     &.promo-col {
       background: $contrast-color;
     }
-    &.phone-col {
+    &.phone-col,
+    &.edit-col {
       background: $primary-color;
     }
     i {
